# TSAI_Lab

./: .env.example  .gitignore  README.md  THESIS_PLOT_MANIFEST.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: defaults.yaml  thesis_reference_coefficients.yaml
scripts/: backfill_tsa_history.py  build_user_manual.py  clear_run_history.py  compare_thesis_coefficients.py  db_check.py  db_init.py  db_list_series.py  db_load_series.py  db_migrate.py  db_seed_werte.py  generate_run_report.py  inspect_werte.py  prepare_web_postgres.py  regenerate_exp_trend.py  run_correlation.py  run_phase0_pdax.py  run_tsa.py  run_web.py  setup_postgres.py  setup_sqlite.ps1  setup_sqlite.py
scripts/sql/: create_tslab_db.sql
tests/: helpers_output.py  test_ai_providers.py  test_analysis_mode.py  test_analysis_window.py  test_categories_and_run_report.py  test_correlation.py  test_date_parse.py  test_db_migrate.py  test_delete_service.py  test_forecast_horizons.py  test_forecast_plot_window.py  test_garch.py  test_level_forecast.py  test_month_align.py  test_number_parse.py  test_output_naming.py  test_output_paths.py  test_plot_enhancements.py  test_report_background_prepare.py  test_report_docx.py  test_report_model_single.py  test_report_models.py  test_report_session.py  test_reporting_status.py  test_residual_diagnostics.py  test_run_settings.py  test_run_telemetry.py  test_series_chart.py  test_thesis_coefficients.py  test_tsa_window_preview.py  test_web_backend.py
tslab/: __init__.py  config_loader.py
tslab/db/: __init__.py  engine.py  (+2 more)
(+85 files in other folders)
