[project]
name = "tsai-lab"
version = "0.1.0"
description = "TSAI_Lab – Zeitreihenanalyse (PostgreSQL, Flask)"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["tslab", "tests", "scripts"]
exclude = [
  ".venv",
  "venv",
  "output",
  "__pycache__",
]

[tool.ruff.lint]
# Pyflakes + ausgewählte pycodestyle-Fehler (PEP-8); keine formatierende Massenreform.
select = [
  "E4",
  "E7",
  "E9",
  "F",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Scripts setzen zuerst sys.path, bevor tslab importiert wird.
"scripts/**" = ["E402"]
